<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
    >

    <include
        layout="@layout/title"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_activity_settings"
        android:background="#ffffff"
        >

        <com.focosee.qingshow.widget.QSTextView
            android:id="@+id/tv_u08_cur_pw_tab"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_left_activity_settings"
            android:layout_marginRight="@dimen/margin_right_activity_settings"
            android:text="@string/u08_cur_password"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <com.focosee.qingshow.widget.QSEditText
            android:id="@+id/et_u08_cur_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_right_activity_settings"
            android:layout_toRightOf="@id/tv_u08_cur_pw_tab"
            android:background="@null"
            android:digits="@string/number_letter"
            android:hint="@string/u08_cur_hint_text"
            android:maxLength="12"
            android:singleLine="true"
            android:password="true"
            android:textColorHint="#C7C7CD"
            android:textSize="@dimen/text_size"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_activity_settings"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_activity_settings"
        android:background="#ffffff"
        >

        <com.focosee.qingshow.widget.QSTextView
            android:id="@+id/tv_u08_new_pw_tab"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_left_activity_settings"
            android:layout_marginRight="@dimen/margin_right_activity_settings"
            android:text="@string/u08_new_password"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <com.focosee.qingshow.widget.QSEditText
            android:id="@+id/et_u08_new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_right_activity_settings"
            android:layout_toRightOf="@id/tv_u08_new_pw_tab"
            android:background="@null"
            android:hint="@string/u08_cur_hint_text"
            android:maxLength="12"
            android:password="true"
            android:digits="@string/number_letter"
            android:singleLine="true"
            android:textColorHint="#C7C7CD"
            android:textSize="@dimen/text_size"/>
    </RelativeLayout>

</LinearLayout>
