<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/master_blue"
    tools:context="com.focosee.qingshow.activity.U19LoginGuideActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/login_background"
        android:alpha="0.8"/>

    <ImageView
        android:id="@+id/close"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:layout_alignParentRight="true"
        android:layout_gravity="right"
        app:layout_marginPercent="2%"
        android:onClick="onClick"
        android:src="@drawable/collect_icon_close" />

    <ImageView
        android:id="@+id/u19_mobile_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/shouji"
        android:onClick="onClick"
        android:layout_centerHorizontal="true"
        app:layout_marginTopPercent="20%"
        app:layout_widthPercent="30%"
        app:layout_heightPercent="15%"/>

    <com.focosee.qingshow.widget.QSTextView
        style="@style/navigation_text"
        android:id="@+id/u19_mobile_login_text"
        android:layout_below="@+id/u19_mobile_login"
        android:layout_alignLeft="@id/u19_mobile_login"
        android:layout_alignRight="@id/u19_mobile_login"
        android:textSize="20sp"
        android:text="@string/mobile_login"/>

    <ImageView
        android:id="@+id/u19_weixin_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/weixin_login"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:layout_below="@+id/u19_mobile_login_text"
        app:layout_marginTopPercent="5%"
        app:layout_widthPercent="30%"
        app:layout_heightPercent="15%"/>

    <com.focosee.qingshow.widget.QSTextView
        style="@style/navigation_text"
        android:id="@+id/u19_weixin_login_text"
        android:layout_below="@+id/u19_weixin_login"
        android:layout_alignLeft="@id/u19_weixin_login"
        android:layout_alignRight="@id/u19_weixin_login"
        android:textSize="20sp"
        android:text="@string/weixin_login_activity_register"/>


    <com.focosee.qingshow.widget.QSButton
        android:id="@+id/u19_loging_register_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/u19_weixin_login_text"
        android:background="@drawable/white_btn_ring"
        android:textColor="@color/white"
        app:layout_marginTopPercent="5%"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:padding="10dp"
        android:textSize="20sp"
        android:text="@string/goto_register"/>


</android.support.percent.PercentRelativeLayout>
